--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
   }
 
   .btn-primary {
-    @apply btn bg-primary text-white hover:bg-primary/90;
+    @apply btn bg-green-600 text-white hover:bg-green-700;
   }
 
   .btn-secondary {
@@ -30,7 +30,7 @@
   }
 
   .btn-outline {
-    @apply btn border-2 border-primary text-primary hover:bg-primary hover:text-white;
+    @apply btn border-2 border-teal-600 text-teal-600 hover:bg-teal-600 hover:text-white;
   }
 
   .input {
